...
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:id="@+id/title_edit_text"
            android:hint="@string/add_task"
            android:textColor="@color/textContentPrimary"

            android:textColorHint="@color/textContentSecondary"
            android:maxHeight="150dp"
            android:textSize="22sp"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/fill_description" />

        <Button
            android:id="@+id/save_task"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:text="@string/save_task"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
