...

        <include android:id="@+id/includeRecycler"
            android:clipToPadding="false"
            layout="@layout/content_scrolling_2" />

        <!--<androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tasksRecyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            app:layout_anchorGravity="top"
            android:layout_gravity="top"
            android:paddingBottom="24dp"
...
        app:menu="@menu/bottom_app_bar"
        app:navigationIcon="@drawable/ic_menu_black_24dp"
        app:navigationIconTint="?attr/colorOnPrimary"
        app:itemIconTint="?attr/colorOnPrimary" />
    <!-- app:backgroundTint="#85F1FF"-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_task_text"
        app:backgroundTint="@color/floatingAddButton"
        app:layout_anchor="@+id/bottomAppBar"
        app:layout_anchorGravity="top|center"
...
