...
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_collapseMode="pin"
            app:menu="@menu/bottom_app_bar"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:popupTheme="@style/ThemeOverlay.App.PopupOverlay"
            app:title="Modifier une tâche"
            app:titleTextColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="bottom"
...
